2009-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::stdio_init): Use GetCurrentProcess() rather than
	hMainProc as process handle when duplicating the stdout handle.
	Explain why.  Add Win32 error code to debug output.

2009-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::fixup_before_fork_exec): Add
	socket handle value to debug output.
	(fhandler_socket::fixup_after_fork): Ditto.  Make new socket handle
	OVERLAPPED, just as if it has been created with socket().
	* net.cc (fdsock): Close duplicated socket and explain why.  Disable
	the entire WSADuplicateSocket test for now and explain why.

2009-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::set_close_on_exec): Only call
	fhandler_base::set_close_on_exec for inheritable sockets.

2009-11-21  Corinna Vinschen  <corinna@vinschen.de>

	* globals.cc (ro_u_dll): New R/O unicode string.
	* syscalls.cc (nt_path_has_executable_suffix): Add ro_u_dll to
	blessed_executable_suffixes array.  Explain why.

2009-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (fhandler_disk_file::lock): Disable a shortcut from the
	original BSD code, but keep it in and documented why we can't use it.

2009-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* ntea.cc (read_ea): Always add length of "user." prefix, not only
	on Samba.  Change comment.

2009-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* ntea.cc (read_ea): Try to open file first to have more sensible
	error codes.  Always refuse non "user." EAs for Linux compatibility
	and return EOPNOTSUPP.  Fix handling of empty (== non-existant) EAs.
	Always prepend "user." prefix to EA names.
	(write_ea): Try to open file first to have more sensible error codes.
	Always refuse non "user." EAs for Linux compatibility and return
	EOPNOTSUPP.  Delay skipping "user." prefix until after potential call
	to read_ea.

2009-11-17  Corinna Vinschen  <corinna@vinschen.de>
